# q2radlauncher

./: .gitignore  __main__.spec  build_executable.cmd  build_executable.sh  build_executable.zsh  pyproject.toml  q2radlauncher.spec  requirements.txt  start-q2rad.bat
.github/workflows/: build.yaml
q2radlauncher/: __main__.py  q2radlauncher.py  q2splash.py
q2radlauncher - Copy/: q2radlauncher.py
