[tool.poetry]
name = "q2radlauncher"
version = "0.1.0"
description = ""
authors = ["Andrei Puchko <andrei.puchko@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
q2terminal = "^0.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
pyinstaller = "^5.10.1"
q2terminal = { path = "../q2terminal/", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
